@@ -2,6 +2,7 @@ cdrom-checker (1.24) UNRELEASED; urgency=low
 
   * Fix "LDLFAGS" typo in Makefile.
   * Mark argc parameter to main as unused.
+  * Use correct compiler, linker, and strip when cross-building.
 
  -- Colin Watson <cjwatson@debian.org>  Wed, 09 Jan 2013 12:05:27 +0000
 
